add loadBtn, update constants.js

--- a/src/index.html
+++ b/src/index.html
@@ -26,7 +26,10 @@
       <!-- Карточки изображений -->
     </div>
 
+    <button type="button" class="load-more">Load more</button>
+
     <!-- Скрипт идёт последним в разметке. В нём уже подключен главный SASS-файл. -->
     <script src="./index.js"></script>
+    <!-- <script src="./index-2.js"></script> -->
   </body>
 </html>
