first try to get images, upload more

--- a/src/index.html
+++ b/src/index.html
@@ -29,7 +29,7 @@
     <button type="button" class="load-more">Load more</button>
 
     <!-- Скрипт идёт последним в разметке. В нём уже подключен главный SASS-файл. -->
-    <script src="./index.js"></script>
-    <!-- <script src="./index-2.js"></script> -->
+    <!-- <script src="./index.js"></script> -->
+    <script src="./index-2.js"></script>
   </body>
 </html>
