--- a/src/index.html
+++ b/src/index.html
@@ -16,17 +16,16 @@
 
     <!-- Так добавляются фрагменты в главные HTML-файлы страниц. -->
     <!-- <include src="./partials/example.html"></include> -->
-
+    <!-- <div class="form-wrapper"></div> -->
     <form class="search-form" id="search-form">
       <input type="text" name="searchQuery" autocomplete="off" placeholder="Search images..." />
       <button type="submit">Search</button>
     </form>
-
     <div class="gallery">
       <!-- Карточки изображений -->
     </div>
 
-    <button type="button" class="load-more">Load more</button>
+    <include src="./partials/load-btn.html"></include>
 
     <!-- Скрипт идёт последним в разметке. В нём уже подключен главный SASS-файл. -->
     <!-- <script src="./index.js"></script> -->
